--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
 </head>
 <body>
   <div class="wrapper">
-      <div class="heading">
+      <div class="heading box">
           <h1>Join our community</h1>
 
           <h2>30-day, hassle-free money back guarantee</h2>
 
-          <p>Gain access to our full library of tutorials along with expert code reviews.<br>
-          Perfect for any developers who are serious about honing their skills.</p>
+          <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
 
       </div>
 
-      <div class="subscription">
+      <div class="subscription box">
           <h3>Monthly Subscription</h3>
 
          <p> <span class="dollar">&dollar;29</span> <span class="permonth">per month<span></p>
@@ -36,7 +35,7 @@
          
       </div>
 
-      <div class="whyus">
+      <div class="whyus box">
           <h3>Why Us</h3>
 
          <p> Tutorials by industry experts <br>
